test: fix Hotel tests